--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <div class="wrapper">
     <section class="container-left">
         <h1>Easy Shopping Via Mobile</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio, praesentium natus quidem asperiores deserunt voluptate impedit, at cumque nisi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
         <button>Get Started</button>
     </section>
     <section class="container-rigth">
         <header>
-            <a>Home</a>
-            <a>Work</a>
-            <a>About</a>
-            <a>Contact</a>
+            <a class="link-header">Home</a>
+            <a class="link-header">Work</a>
+            <a class="link-header">About</a>
+            <a class="link-header">Contact</a>
         </header>
-        <img alt="gril-phone" src="./assets/gril-phone.png">
+        <div class="imagem">
+             <img alt="gril-phone" src="./assets/gril-phone.png">
+        </div>     
     </section>
     </div>
 </body>
